# spuff

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml  e2e.yml  release.yml
docs/: ai-tools.md  architecture.md  configuration.md  project-config.md  security.md  spec.md  troubleshooting.md
docs/adr/: 0001-cloud-init-bootstrap.md  0002-two-phase-bootstrap.md  0003-sqlite-local-state.md  0004-ssh-agent-forwarding.md  0005-provider-trait-abstraction.md  0006-project-config-spec.md  README.md  template.md
docs/development/: README.md  cross-compilation.md  debugging.md  releasing.md  setup.md  testing.md
docs/providers/: README.md  creating-a-provider.md  provider-api.md  testing-providers.md
examples/: README.md
examples/cloud-init/: custom-packages.yaml  custom-tools.sh
examples/configs/: ci-cd.yaml  developer.yaml  minimal.yaml  ml-gpu.yaml  power-user.yaml
examples/dotfiles/: README.md
src/: config.rs  error.rs  main.rs  project_config.rs  state.rs  utils.rs
src/agent/: devtools.rs  docker_manager.rs  main.rs  metrics.rs  project_setup.rs  routes.rs  volume_manager.rs
src/agent/devtools/: ai_tools.rs  environment.rs  installer.rs  manager.rs  mod.rs  system.rs  types.rs
src/bundles/: mod.rs
src/cli/: mod.rs
src/cli/commands/: agent.rs  ai.rs  config.rs  down.rs  init.rs  logs.rs  mod.rs  snapshot.rs  ssh.rs  status.rs  up.rs  volume.rs
src/cli/commands/agent/: docker.rs  exec.rs  format.rs  http.rs  logs.rs  mod.rs  status.rs  types.rs
src/cli/commands/status/: display.rs  format.rs  http.rs  mod.rs  types.rs
src/cli/commands/up/: agent_upload.rs  bootstrap.rs  build.rs  display.rs  mod.rs  preflight.rs  provision.rs  volumes.rs
src/cli/commands/volume/: list.rs  mod.rs  mount.rs  sync.rs  unmount.rs
src/connector/: docker.rs  mod.rs  ssh.rs
src/environment/: cloud_init.rs  mod.rs
src/provider/: config.rs  digitalocean.rs  docker.rs  error.rs  mod.rs  registry.rs
src/ssh/: agent.rs  client.rs  config.rs  exec.rs  keys.rs  managed_key.rs  mod.rs  pty.rs  sftp.rs  tunnel.rs
src/tui/: mod.rs  progress.rs  widgets.rs
src/volume/: config.rs  driver.rs  mod.rs  state.rs
src/volume/drivers/: mod.rs  sshfs.rs
