[package]
name = "spuff"
version = "0.1.0"
edition = "2021"
authors = ["Avelino <avelino@avelino.run>"]
description = "Ephemeral dev environments in the cloud. Spin up when needed, auto-destroy when forgotten."
license = "MIT"
repository = "https://github.com/avelino/spuff"
keywords = ["cli", "cloud", "development", "ephemeral", "devbox"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client for cloud APIs
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# HTTP server for agent
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"


# Async
async-trait = "0.1"

# Error handling
anyhow = "1"
thiserror = "2"

# Path expansion
shellexpand = "3"

# Find binaries in PATH
which = "7"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# TUI / Output
indicatif = "0.17"
console = "0.15"
dialoguer = "0.11"
ratatui = "0.29"
crossterm = "0.28"

# Templates
tera = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# System info for agent
sysinfo = "0.33"

# UUID for instance naming
uuid = { version = "1", features = ["v4"] }

# Local state storage
rusqlite = { version = "0.32", features = ["bundled"] }

# Base64 for cloud-init
base64 = "0.22"

# Lightweight regex for env var resolution
regex-lite = "0.1"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
wiremock = "0.6"

[[bin]]
name = "spuff"
path = "src/main.rs"

[[bin]]
name = "spuff-agent"
path = "src/agent/main.rs"

[profile.release]
lto = true
strip = true
opt-level = "z"
