[package]
name = "spuff"
version = "0.1.0"
edition = "2021"
authors = ["Avelino <avelinorun@gmail.com>"]
description = "Ephemeral dev environments in the cloud. Spin up when needed, auto-destroy when forgotten."
license = "MIT"
repository = "https://github.com/avelino/spuff"
keywords = ["cli", "cloud", "development", "ephemeral", "devbox"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client for cloud APIs
reqwest = { version = "0.12", features = [
  "json",
  "rustls-tls",
], default-features = false }

# HTTP server for agent
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"


# Async
async-trait = "0.1"
async-stream = "0.3"
futures = "0.3"

# Error handling
anyhow = "1"
thiserror = "2"

# Path expansion
shellexpand = "3"

# Find binaries in PATH
which = "7"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# TUI / Output
indicatif = "0.17"
console = "0.15"
dialoguer = "0.11"
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

# Templates
tera = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# System info for agent
sysinfo = "0.38"

# UUID for instance naming
uuid = { version = "1", features = ["v4"] }

# Local state storage
chrondb = "0.0.0-dev.9"

# Docker API (local provider)
bollard = "0.18"
bytes = "1"
term_size = "0.3"

# Base64 for cloud-init
base64 = "0.22"

# Lightweight regex for env var resolution
regex-lite = "0.1"

# SSH - Pure Rust implementation (no external binaries)
# NOTE: 0.48 has a bug with RSA SHA2 agent auth - workaround implemented in client.rs
russh = "0.48"
russh-keys = "0.48"
russh-sftp = "2.1"
ssh-key = { version = "0.6", features = ["ed25519", "rsa", "encryption"] }
ed25519-dalek = "2"
rsa = "0.9"
sha2 = "0.10"
dirs = "6.0.0"
rand = "0.8"

# Unix signals for process management
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "term"] }

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
wiremock = "0.6"
rand = "0.8"

[[bin]]
name = "spuff"
path = "src/main.rs"

[[bin]]
name = "spuff-agent"
path = "src/agent/main.rs"

[profile.release]
lto = true
strip = true
opt-level = "z"
